add: 백엔드 API URL 추가

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -9,3 +9,7 @@ FIGMA_API_KEY=
 # OpenAI API Key
 # Get from: https://platform.openai.com/api-keys
 OPEN_AI_API=
+
+# Backend API URL
+NEXT_PUBLIC_API_URL=http://49.50.137.35:8080
+
