--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ bcrypt = "3.2.2"
 websockets = "^15.0.1"
 openai = "^2.14.0"
 greenlet = "^3.0.3"
+langchain-openai = "^1.1.7"
+langgraph = "^1.0.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
