refactor: E2E 테스트 코드 제거로 프로젝트 정리
- API, 인증, 채팅 흐름 관련 e2e 테스트 코드 제거
- 테스트 중복 및 유지 관리 어려움을 이유로 불필요한 코드 삭제
- 테스트 관련 페이지 및 스토리지 참조 초기화 코드 정리

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev:watch": "nodemon",
     "build": "next build",
     "start": "next start",
+    "clean": "npm cache clean --force",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,css}\"",
