--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,10 +1,12 @@
 {
   "semi": true,
-  "trailingComma": "es5",
   "singleQuote": false,
-  "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
-
