feat: Docker 환경 변수 예시 및 Nginx 리버스 프록시 설정을 추가하고, 관련 파일을 .gitignore 반영

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,13 @@ yarn.lock
 .agent/
 /CLAUDE.md
 .mcp.json
+
+# Docker Environment Secrets
+docker.env
+!docker.env.example
+
+
+# SSL Certificates
+*.key
+*.crt
+*.pem
