feat: 배포 가이드 문서를 추가하고 AI 엔진 포트 매핑을 주석 처리하며, 관련 문서 및 종속성 파일을 업데이트합니다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     command: poetry run python ../ai-engine/app.py
-    ports:
-      - "5000:5000"
+    # ports:
+    #   - "5000:5000"
 
   frontend:
     build:
